# fastsum

./: .gitignore  CODE_OF_CONDUCT.md  ChangeLog.md  LICENSE  README.md  fastsum.cabal
.github/workflows/: haskell.yml
examples/: Errors.hs  Main.hs
src/Data/: Sum.hs
src/Data/Sum/: Populate.hs  Templates.hs
