name:                fastsum
version:             0.2.0.0
synopsis:            A fast open-union type suitable for 100+ contained alternatives
homepage:            https://github.com/patrickt/fastsum#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix, Josh Vera, Allele Dev, Patrick Thomson
maintainer:          example@example.com
copyright:           Rob Rix, Josh Vera, Allele Dev, Patrick Thomson 2016-2018
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Sum
  other-modules:       Data.Sum.Templates
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , template-haskell
  default-language:    Haskell2010

executable example
  hs-source-dirs:   examples
  main-is:          Main.hs
  build-depends:    base, fastsum
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/patrickt/fastsum
